--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -153,6 +153,8 @@
     <None Include="shaders\anim.vs" />
     <None Include="shaders\shader_Lights.fs" />
     <None Include="shaders\shader_Lights.vs" />
+    <None Include="shaders\shader_texture_color.fs" />
+    <None Include="shaders\shader_texture_color.vs" />
     <None Include="shaders\skybox.fs" />
     <None Include="shaders\skybox.vs" />
   </ItemGroup>
