--- a/Project.vcxproj.filters
+++ b/Project.vcxproj.filters
@@ -46,5 +46,11 @@
     <None Include="shaders\skybox.vs">
       <Filter>Archivos de recursos</Filter>
     </None>
+    <None Include="shaders\shader_texture_color.fs">
+      <Filter>Archivos de recursos</Filter>
+    </None>
+    <None Include="shaders\shader_texture_color.vs">
+      <Filter>Archivos de recursos</Filter>
+    </None>
   </ItemGroup>
 </Project>
